Adding kafka config